      variables.
    * Loading of FMUs can now be done from an unzipped folder if the argument 'allow_unzipped_fmu' is set to True.
    * The argument 'path' to load_fmu and the different FMI-classes is now deprecated.
    * Added support to log to streams via the keyword argument log_file_name. This is supported for all the FMI-classes as well as the function load_fmu.
      
--- PyFMI-2.8.7 ---
    * Added safety check for updated binary files which can cause 
      issues.
    * Fixed so that a matrix of all the result from a binary file can 
      be retrieved even if delayed loading is used.
      
--- PyFMI-2.8.6 ---
    * Fixed so that the written binary file is always consistent (i.e.
      if a simulation aborts, it can still be read)
    * Changed default loading strategiy for binary files, now the
      trajectories are loaded on demand instead of all at the same time.
    * Updated Master algorithm options documentation and fixed result
      file naming.
    * Fixed 'block_initialization' in Master algorithm when using 
      Python 3
    * Fixed so that .initial is set properly on ScalarVariable2.
    * Fixed get_variable_nominal when called for valueref of variable.
    
--- PyFMI-2.8.5 ---
    * Added support for option 'logging' for different ODE solvers.
    
--- PyFMI-2.8.4 ---
    * Added utility function for determining if the maximum log file
      size has been reached
    * Added support for parsing boolean values in the XML log parser
    
--- PyFMI-2.8.3 ---
    * Fixed result saving when saving only the "time" variable
    * Exposed the dependencies kind attributes from FMI 2.0

--- PyFMI-2.8.2 ---
    * Added default arguments in the simulation interface (minor)

--- PyFMI-2.8.1 ---
    * Fixed so that the internal event information is saved together
      with the FMU state (when using save / get state).

--- PyFMI-2.8 ---
    * Fixed so that default options are not overriden when setting
      solver options.