@@ -5,6 +5,7 @@
     * Loading of FMUs can now be done from an unzipped folder if the argument 'allow_unzipped_fmu' is set to True.
     * The argument 'path' to load_fmu and the different FMI-classes is now deprecated.
     * Added support to log to streams via the keyword argument log_file_name. This is supported for all the FMI-classes as well as the function load_fmu.
+    * Improved performance of the Master algorithm.
       
 --- PyFMI-2.8.7 ---
     * Added safety check for updated binary files which can cause 
